# rust-code-editor

./: .gitignore  Cargo.toml  Dioxus.toml  test_large_file.txt
src/: main.rs
src/components/: file_explorer.rs  file_tree.rs  git_panel.rs  mod.rs
src/editor/: mod.rs  rope_engine.rs  types.rs  virtual_view.rs
src/layout/: header.rs  icon_strip.rs  main_content.rs  menu_bar.rs  mod.rs  sidebar.rs  tab_bar.rs
src/theme/: mod.rs
