[package]
name = "code_editor"
version = "0.1.0"
authors = ["kabiraj pan <kabirajpan2@gmail.com>"]
edition = "2021"

[dependencies]
async-std = "1.13.2"
dioxus = { version = "0.6.0", features = [] }
notify = "8.2.0"
tokio = { version = "1.48.0", features = ["full"] }
ropey = "1.6"
wasm-bindgen = "0.2"
rfd = "0.15.4"


[dependencies.web-sys]
version = "0.3.82"
features = ["Window", "Document", "Element", "HtmlElement", "Navigator", "Clipboard"]

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
